ecmascript/parser/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings19_ES5/input.ts.stderr
error: Invalid unciode code point
 --> $DIR/tests/typescript-errors/tsc/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings19_ES5/input.ts:3:13
  |
3 | var x = "\u{}";
  |             ^

